<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/city1"
        android:enabled="true"
        android:orderInCategory="1"
        android:title="@string/dnieper"
        android:visible="true" />
    <item
        android:id="@+id/city2"
        android:enabled="true"
        android:orderInCategory="2"
        android:title="@string/zaporizhzhia"
        android:visible="true" />
    <item
        android:id="@+id/city3"
        android:enabled="true"
        android:orderInCategory="3"
        android:title="@string/nikolaev"
        android:visible="true" />
    <item
        android:id="@+id/city4"
        android:enabled="true"
        android:orderInCategory="4"
        android:title="@string/poltava"
        android:visible="true" />
    <item
        android:id="@+id/city5"
        android:enabled="true"
        android:orderInCategory="5"
        android:title="@string/kharkov"
        android:visible="true" />
</menu>